--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@ layout: compress
     <header class="header">
         <h1>SEOATIIIT</h1>
         <nav class="links">
-            <a href="#"><i class="fa fa-twitter-square fa-3x"></i></a>
-            <a href="#"><i class="fa fa-instagram fa-3x"></i></a>
-            <a href="#"><i class="fa fa-facebook-square fa-3x"></i></a>
-            <a href="#"><i class="fa fa-tumblr-square fa-3x"></i></a>
+            <a href="http://www.twitter.com/smartshibasish"><i class="fa fa-twitter-square fa-3x"></i></a>
+            <a href="http://www.github.com/shibasishp"><i class="fa fa-github fa-3x"></i></a>
+            <a href="http://www.facebook.com/shibasish.patel.90"><i class="fa fa-facebook-square fa-3x"></i></a>
+            <a href="http://www.shibasisp.github.io/"><i class="fa fa-rss fa-3x"></i></a>
         </nav>
     </header>
     <div class="content">
