--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@ layout: compress
 <html lang="en" class="no-js">
 <head>
     <meta name="google-site-verification" content="x1Y0_6Zguxgn6OVpbC38k9mOdQwxfFbukWER3sJYdv8" />
+    <meta name="msvalidate.01" content="E8222DF78CD86D08BF54068DDE8348BD" />
     <meta charset="UTF-8"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
